Fix text alignment between table columns in EventMetaDataTable

--- a/src/components/style/EventMetaDataTable.scss
+++ b/src/components/style/EventMetaDataTable.scss
@@ -7,6 +7,7 @@
                 > th {
                     text-align: left;
                     vertical-align: top;
+                    font-family: monospace;
                 }
 
                 > td {
